--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        multiDexEnabled false
+
         ndk {
             abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
         }
@@ -29,7 +31,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:support-v4:28.0.0"
+//    implementation "com.android.support:support-v4:28.0.0"
 
     implementation project(':core')
 }
