--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,7 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+version_name=1.0
+version_code=1
+
 
